# EnSCDynamics

./: .cursorignore  .gitignore  CMakeLists.txt  logger.h  main.cpp  project.txt
Explicit3D/: CMakelists.txt
Explicit3D/include/: BoundaryCondition.h  ElementBase.h  ElementHexN8.h  FSI_share_data.h  InpData.h  Material_elastic.h  StepData.h  dataIn.h  dataOut.h  exDyna3D.h  fevalues.h  gauss_integral_1d.h  types.h
Explicit3D/source/: Element_HexN8.cpp  Material_elastic.cpp  dataIn.cpp  dataOut.cpp  exDyna3D.cpp  gauss_integral_1d.cpp
Explicit3D/tests/: CMakeLists.txt  test_apply_fsiSph_nodeForce.cpp
VTK_win64/include/vtk-9.4/: DICOMCMakeConfig.h  vtkFiltersTemporalModule.h  vtkIOERFModule.h  vtkIOEngysModule.h  vtkIOFDSModule.h  vtkIOLANLX3DModule.h  vtkOpenGLError.h  vtkRenderingLICOpenGL2Module.h  vtkRenderingOpenGLConfigure.h  vtkTestingCoreModule.h  vtkVersionFull.h  vtkVersionMacros.h  vtkVersionQuick.h  vtk_diy2.h  vtk_exprtk.h
VTK_win64/include/vtk-9.4/token/: CxxABIConfigure.h  Exports.h
VTK_win64/include/vtk-9.4/vtkcgns/src/: cgnstypes.h
VTK_win64/include/vtk-9.4/vtkexodusII/include/: exodus_config.h
VTK_win64/include/vtk-9.4/vtkioss/: ioss_export.h
VTK_win64/include/vtk-9.4/vtklibharu/include/: hpdf_config.h
VTK_win64/include/vtk-9.4/vtklibxml2/include/libxml/: xmlversion.h
VTK_win64/include/vtk-9.4/vtknetcdf/include/: netcdf_meta.h
VTK_win64/include/vtk-9.4/vtkpugixml/src/: pugiconfig.hpp
VTK_win64/include/vtk-9.4/vtkzlib/: zconf.h
VTK_win64/lib/: vtkChartsCore-9.4.lib  vtkCommonColor-9.4.lib  vtkCommonComputationalGeometry-9.4.lib  vtkCommonDataModel-9.4.lib  vtkCommonExecutionModel-9.4.lib  vtkCommonMath-9.4.lib  vtkCommonMisc-9.4.lib  vtkCommonSystem-9.4.lib  vtkCommonTransforms-9.4.lib  vtkDICOMParser-9.4.lib  vtkDomainsChemistry-9.4.lib  vtkDomainsChemistryOpenGL2-9.4.lib  vtkFiltersAMR-9.4.lib  vtkFiltersCellGrid-9.4.lib  vtkFiltersCore-9.4.lib  vtkFiltersExtraction-9.4.lib  vtkFiltersFlowPaths-9.4.lib  vtkFiltersGeneral-9.4.lib  vtkFiltersGeneric-9.4.lib  vtkFiltersGeometry-9.4.lib  vtkFiltersGeometryPreview-9.4.lib  vtkFiltersHybrid-9.4.lib  vtkFiltersHyperTree-9.4.lib  vtkFiltersImaging-9.4.lib  vtkFiltersModeling-9.4.lib  vtkFiltersParallel-9.4.lib  vtkFiltersParallelImaging-9.4.lib  vtkFiltersPoints-9.4.lib  vtkFiltersProgrammable-9.4.lib  vtkFiltersReduction-9.4.lib  vtkFiltersSMP-9.4.lib  vtkFiltersSelection-9.4.lib  vtkFiltersSources-9.4.lib  vtkFiltersStatistics-9.4.lib  vtkFiltersTemporal-9.4.lib  vtkFiltersTensor-9.4.lib  vtkFiltersTexture-9.4.lib  vtkFiltersTopology-9.4.lib  vtkFiltersVerdict-9.4.lib  vtkGeovisCore-9.4.lib  (+115 more)
VTK_win64/lib/cmake/vtk-9.4/: VTK-targets-release.cmake  VTK-targets.cmake  VTK-vtk-module-find-packages.cmake  VTK-vtk-module-properties.cmake  vtk-config-version.cmake  vtk-config.cmake
VTK_win64/lib/vtk-9.4/hierarchy/VTK/: vtkChartsCore-hierarchy.txt  vtkCommonColor-hierarchy.txt  vtkCommonComputationalGeometry-hierarchy.txt  vtkCommonCore-hierarchy.txt  vtkCommonDataModel-hierarchy.txt  vtkCommonExecutionModel-hierarchy.txt  vtkCommonMath-hierarchy.txt  vtkCommonMisc-hierarchy.txt  vtkCommonSystem-hierarchy.txt  vtkCommonTransforms-hierarchy.txt  vtkDomainsChemistry-hierarchy.txt  vtkDomainsChemistryOpenGL2-hierarchy.txt  vtkFiltersAMR-hierarchy.txt  vtkFiltersCellGrid-hierarchy.txt  vtkFiltersCore-hierarchy.txt  vtkFiltersExtraction-hierarchy.txt  vtkFiltersFlowPaths-hierarchy.txt  vtkFiltersGeneral-hierarchy.txt  vtkFiltersGeneric-hierarchy.txt  vtkFiltersGeometry-hierarchy.txt  vtkFiltersGeometryPreview-hierarchy.txt  vtkFiltersHybrid-hierarchy.txt  vtkFiltersHyperTree-hierarchy.txt  vtkFiltersImaging-hierarchy.txt  vtkFiltersModeling-hierarchy.txt  vtkFiltersParallel-hierarchy.txt  vtkFiltersParallelImaging-hierarchy.txt  vtkFiltersPoints-hierarchy.txt  vtkFiltersProgrammable-hierarchy.txt  vtkFiltersReduction-hierarchy.txt  vtkFiltersSMP-hierarchy.txt  vtkFiltersSelection-hierarchy.txt  vtkFiltersSources-hierarchy.txt  vtkFiltersStatistics-hierarchy.txt  vtkFiltersTemporal-hierarchy.txt  vtkFiltersTensor-hierarchy.txt  vtkFiltersTexture-hierarchy.txt  vtkFiltersTopology-hierarchy.txt  vtkFiltersVerdict-hierarchy.txt  vtkGeovisCore-hierarchy.txt  (+80 more)
inp/: GenVirPa.inp  Job-1.inp  Job-6.inp  test.inp  test_part1.inp  test_single.inp  test_single2.inp  test_step.inp  test_step1.inp  test_step2.inp  test_step3.inp  test_step4.inp  test_trans.inp
spdlog/lib/: spdlog.lib
spdlog/lib/cmake/spdlog/: spdlogConfigTargets.cmake  spdlogConfigVersion.cmake
spdlog/lib/pkgconfig/: spdlog.pc
